--- a/main_testing.ipynb
+++ b/main_testing.ipynb
@@ -21,22 +21,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "array([2, 9, 9, 7, 0, 0, 5, 5, 0, 2, 3, 5, 0, 6, 1, 3, 5, 8, 6, 8, 4, 8, 0,\n",
+       "       9, 3, 1, 0, 1, 2, 8, 1, 9, 9, 4, 7, 5, 9, 3, 2, 1, 0, 3, 9, 6, 4, 1,\n",
+       "       7, 7, 7, 7, 7, 6, 8, 0, 6, 6, 1, 0, 1, 9, 7, 8, 8, 2, 5, 3, 9, 0, 3,\n",
+       "       8, 7, 4, 0, 5, 8, 2, 5, 2, 6, 5, 4, 2, 4, 6, 7, 3, 4, 0, 3, 8, 3, 6,\n",
+       "       0, 8, 3, 7, 9, 3, 0, 1])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.choice(10, size=1, p=np.repeat(0.1, 10))[0]"
+    "np.random.choice(10, size=100, p=np.repeat(0.1, 10))"
    ]
   },
   {
@@ -120,22 +124,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "0.030303030303030304"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cnt[500]"
+    "float(cnt[2]) / 33"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  0.,  0.,  0.,  0.])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.1,  0.1,  0.1,  0.1,  0.1])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones(5) / 10"
    ]
   },
   {
