Added frequency calculation to new populations!

--- a/main_testing.ipynb
+++ b/main_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,8 @@
     "import multiprocessing\n",
     "import random\n",
     "import numpy as np\n",
-    "import pandas"
+    "import pandas\n",
+    "import collections"
    ]
   },
   {
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +134,7 @@
        "0.030303030303030304"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,13 +145,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aPopulation = Bentley.createInitialPopulation(10, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(aPopulation.getAllFreq())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aPopulation.getPopSize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnt=collections.Counter()\n",
+    "for people in aPopulation.getIndividuals():\n",
+    "            a_number = people.getNumber()\n",
+    "            cnt[a_number] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(cnt.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnt[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aPopulation = Bentley.createInitialPopulation(1000, 3)\n",
+    "bPopulation = FrequencyDependent.populationReproduceFrequency(aPopulation, 0.004, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.,  0.,  0.,  0.,  0.])"
+       "Counter({1: 310, 2: 339, 3: 351})"
       ]
      },
      "execution_count": 50,
@@ -159,27 +271,27 @@
     }
    ],
    "source": [
-    "np.zeros(5)"
+    "aPopulation.getAllFreq()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.1,  0.1,  0.1,  0.1,  0.1])"
+       "Counter()"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.ones(5) / 10"
+    "bPopulation.calcAllFreq()"
    ]
   },
   {
