Frequency dependent selection looks to be working

--- a/main_testing.ipynb
+++ b/main_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -246,26 +246,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aPopulation = Bentley.createInitialPopulation(1000, 3)\n",
-    "bPopulation = FrequencyDependent.populationReproduceFrequency(aPopulation, 0.004, 0)"
+    "aPopulation = Bentley.createInitialPopulation(20, 3)\n",
+    "bPopulation = FrequencyDependent.populationReproduceFrequency(aPopulation, 0.004, 100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({1: 310, 2: 339, 3: 351})"
+       "Counter({1: 5, 2: 10, 3: 5})"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,22 +276,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter()"
+       "Counter({1: 1, 2: 14, 3: 5})"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bPopulation.calcAllFreq()"
+    "bPopulation.getAllFreq()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.03684211,  0.03684211,  0.03684211,  0.06315789,  0.06315789,\n",
+       "        0.06315789,  0.03684211,  0.03684211,  0.06315789,  0.03684211,\n",
+       "        0.03684211,  0.06315789,  0.06315789,  0.06315789,  0.03684211,\n",
+       "        0.06315789,  0.03684211,  0.06315789,  0.03684211,  0.06315789])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FrequencyDependent.calculate_weight(aPopulation, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({1: 7, 2: 9, 3: 4})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aPopulation.getAllFreq()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.0\n",
+      "9.0\n",
+      "9.0\n",
+      "4.0\n",
+      "7.0\n",
+      "7.0\n",
+      "7.0\n",
+      "9.0\n",
+      "4.0\n",
+      "9.0\n",
+      "7.0\n",
+      "9.0\n",
+      "4.0\n",
+      "7.0\n",
+      "7.0\n",
+      "4.0\n",
+      "9.0\n",
+      "7.0\n",
+      "9.0\n",
+      "9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "aBeta = 10\n",
+    "lParents = aPopulation.getIndividuals()\n",
+    "aPopSize = aPopulation.getPopSize()\n",
+    "cnt = aPopulation.getAllFreq()\n",
+    "parent_weight = np.zeros(aPopSize)\n",
+    "for i, parent in enumerate(lParents):\n",
+    "    parent_weight[i] = 1 + (float(cnt[parent]) / aPopSize) * aBeta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,\n",
+       "        1.,  1.,  1.,  1.,  1.,  1.,  1.])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parent_weight"
    ]
   },
   {
