--- a/main_testing.ipynb
+++ b/main_testing.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,129 +147,447 @@
        "      <th>0</th>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>7.0</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>8.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>11</th>\n",
+       "      <td>8.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
+       "      <td>9.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>2.0</td>\n",
        "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>86.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>86.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>87.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>87.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>89.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>73.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>89.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>91.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>91.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>92.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>92.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>93.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>93.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <td>94.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <td>94.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>95.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>95.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>96.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>96.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>97.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>97.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>98.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>98.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>99.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>22.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>196 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    generation  variant  count\n",
-       "0          1.0      1.0    2.0\n",
-       "1          1.0      2.0    2.0\n",
-       "2          1.0      3.0    1.0\n",
-       "3          1.0      4.0    1.0\n",
-       "4          1.0      5.0    1.0\n",
-       "5          1.0      6.0    1.0\n",
-       "6          1.0      8.0    1.0\n",
-       "7          1.0     10.0    1.0\n",
-       "8          2.0      1.0    7.0\n",
-       "9          2.0      2.0    5.0\n",
-       "10         2.0      3.0    2.0\n",
-       "11         2.0      4.0    1.0\n",
-       "12         2.0      5.0    1.0\n",
-       "13         2.0      6.0    2.0\n",
-       "14         2.0      8.0    1.0\n",
-       "15         2.0     10.0    1.0"
+       "     generation  variant  count\n",
+       "0           1.0      1.0    1.0\n",
+       "1           2.0      1.0    2.0\n",
+       "2           3.0      1.0    3.0\n",
+       "3           4.0      1.0    4.0\n",
+       "4           5.0      1.0    4.0\n",
+       "5           5.0      2.0    1.0\n",
+       "6           6.0      1.0    5.0\n",
+       "7           6.0      2.0    1.0\n",
+       "8           7.0      1.0    6.0\n",
+       "9           7.0      2.0    1.0\n",
+       "10          8.0      1.0    7.0\n",
+       "11          8.0      2.0    1.0\n",
+       "12          9.0      1.0    8.0\n",
+       "13          9.0      2.0    1.0\n",
+       "14         10.0      1.0    9.0\n",
+       "15         10.0      2.0    1.0\n",
+       "16         11.0      1.0   10.0\n",
+       "17         11.0      2.0    1.0\n",
+       "18         12.0      1.0   11.0\n",
+       "19         12.0      2.0    1.0\n",
+       "20         13.0      1.0   11.0\n",
+       "21         13.0      2.0    2.0\n",
+       "22         14.0      1.0   11.0\n",
+       "23         14.0      2.0    3.0\n",
+       "24         15.0      1.0   12.0\n",
+       "25         15.0      2.0    3.0\n",
+       "26         16.0      1.0   13.0\n",
+       "27         16.0      2.0    3.0\n",
+       "28         17.0      1.0   14.0\n",
+       "29         17.0      2.0    3.0\n",
+       "..          ...      ...    ...\n",
+       "166        86.0      1.0   70.0\n",
+       "167        86.0      2.0   16.0\n",
+       "168        87.0      1.0   71.0\n",
+       "169        87.0      2.0   16.0\n",
+       "170        88.0      1.0   72.0\n",
+       "171        88.0      2.0   16.0\n",
+       "172        89.0      1.0   73.0\n",
+       "173        89.0      2.0   16.0\n",
+       "174        90.0      1.0   74.0\n",
+       "175        90.0      2.0   16.0\n",
+       "176        91.0      1.0   75.0\n",
+       "177        91.0      2.0   16.0\n",
+       "178        92.0      1.0   75.0\n",
+       "179        92.0      2.0   17.0\n",
+       "180        93.0      1.0   76.0\n",
+       "181        93.0      2.0   17.0\n",
+       "182        94.0      1.0   76.0\n",
+       "183        94.0      2.0   18.0\n",
+       "184        95.0      1.0   77.0\n",
+       "185        95.0      2.0   18.0\n",
+       "186        96.0      1.0   77.0\n",
+       "187        96.0      2.0   19.0\n",
+       "188        97.0      1.0   77.0\n",
+       "189        97.0      2.0   20.0\n",
+       "190        98.0      1.0   77.0\n",
+       "191        98.0      2.0   21.0\n",
+       "192        99.0      1.0   77.0\n",
+       "193        99.0      2.0   22.0\n",
+       "194       100.0      1.0   78.0\n",
+       "195       100.0      2.0   22.0\n",
+       "\n",
+       "[196 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lPops = Models.YuleRun(2, 10, 0.004, 0, 10)\n",
+    "lPops = Models.YuleRun(100, 1, 0.04, 0, 1)\n",
     "lPops"
    ]
   },
