Optimised the hell out of Yule and Moran processes so that they run ~ 1000X faster

--- a/src/main_testing.ipynb
+++ b/src/main_testing.ipynb
@@ -1243,266 +1243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "196\n",
-      "214\n",
-      "206\n",
-      "154\n",
-      "168\n",
-      "30\n",
-      "100\n",
-      "178\n",
-      "207\n",
-      "212\n",
-      "249\n",
-      "48\n",
-      "96\n",
-      "55\n",
-      "165\n",
-      "228\n",
-      "122\n",
-      "35\n",
-      "166\n",
-      "157\n",
-      "163\n",
-      "106\n",
-      "191\n",
-      "23\n",
-      "48\n",
-      "95\n",
-      "109\n",
-      "69\n",
-      "14\n",
-      "97\n",
-      "84\n",
-      "192\n",
-      "177\n",
-      "197\n",
-      "129\n",
-      "169\n",
-      "107\n",
-      "27\n",
-      "11\n",
-      "48\n",
-      "11\n",
-      "46\n",
-      "131\n",
-      "216\n",
-      "31\n",
-      "153\n",
-      "158\n",
-      "6\n",
-      "139\n",
-      "72\n",
-      "124\n",
-      "191\n",
-      "101\n",
-      "228\n",
-      "97\n",
-      "185\n",
-      "40\n",
-      "27\n",
-      "218\n",
-      "225\n",
-      "29\n",
-      "180\n",
-      "234\n",
-      "158\n",
-      "120\n",
-      "198\n",
-      "20\n",
-      "149\n",
-      "110\n",
-      "115\n",
-      "167\n",
-      "182\n",
-      "193\n",
-      "52\n",
-      "78\n",
-      "7\n",
-      "249\n",
-      "105\n",
-      "78\n",
-      "78\n",
-      "70\n",
-      "18\n",
-      "90\n",
-      "28\n",
-      "213\n",
-      "147\n",
-      "195\n",
-      "1\n",
-      "103\n",
-      "221\n",
-      "88\n",
-      "128\n",
-      "83\n",
-      "141\n",
-      "65\n",
-      "69\n",
-      "40\n",
-      "236\n",
-      "123\n",
-      "180\n",
-      "172\n",
-      "48\n",
-      "110\n",
-      "21\n",
-      "64\n",
-      "24\n",
-      "172\n",
-      "55\n",
-      "82\n",
-      "23\n",
-      "58\n",
-      "16\n",
-      "142\n",
-      "195\n",
-      "130\n",
-      "177\n",
-      "134\n",
-      "185\n",
-      "59\n",
-      "160\n",
-      "119\n",
-      "171\n",
-      "57\n",
-      "240\n",
-      "188\n",
-      "121\n",
-      "185\n",
-      "130\n",
-      "118\n",
-      "35\n",
-      "43\n",
-      "221\n",
-      "223\n",
-      "204\n",
-      "191\n",
-      "167\n",
-      "77\n",
-      "199\n",
-      "40\n",
-      "133\n",
-      "165\n",
-      "111\n",
-      "25\n",
-      "63\n",
-      "67\n",
-      "82\n",
-      "174\n",
-      "226\n",
-      "123\n",
-      "52\n",
-      "67\n",
-      "37\n",
-      "183\n",
-      "199\n",
-      "177\n",
-      "245\n",
-      "223\n",
-      "178\n",
-      "68\n",
-      "67\n",
-      "175\n",
-      "50\n",
-      "135\n",
-      "157\n",
-      "66\n",
-      "157\n",
-      "60\n",
-      "39\n",
-      "217\n",
-      "203\n",
-      "133\n",
-      "27\n",
-      "187\n",
-      "117\n",
-      "162\n",
-      "164\n",
-      "53\n",
-      "92\n",
-      "220\n",
-      "132\n",
-      "243\n",
-      "96\n",
-      "106\n",
-      "120\n",
-      "27\n",
-      "17\n",
-      "173\n",
-      "58\n",
-      "133\n",
-      "131\n",
-      "215\n",
-      "216\n",
-      "61\n",
-      "128\n",
-      "91\n",
-      "209\n",
-      "64\n",
-      "43\n",
-      "72\n",
-      "193\n",
-      "69\n",
-      "16\n",
-      "241\n",
-      "45\n",
-      "211\n",
-      "219\n",
-      "9\n",
-      "126\n",
-      "240\n",
-      "214\n",
-      "41\n",
-      "106\n",
-      "191\n",
-      "180\n",
-      "127\n",
-      "126\n",
-      "166\n",
-      "29\n",
-      "121\n",
-      "36\n",
-      "97\n",
-      "78\n",
-      "92\n",
-      "177\n",
-      "60\n",
-      "42\n",
-      "36\n",
-      "78\n",
-      "121\n",
-      "125\n",
-      "236\n",
-      "232\n",
-      "117\n",
-      "244\n",
-      "172\n",
-      "123\n",
-      "173\n",
-      "126\n",
-      "181\n",
-      "151\n",
-      "23\n",
-      "95\n",
-      "98\n",
-      "18\n",
-      "109\n",
-      "184\n",
-      "71\n",
-      "138\n",
-      "243\n",
-      "137\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "aPopulation = Bentley.createInitialPopulation(250, 250)\n",
     "bPopulation = FrequencyDependent.populationReproduceMoran(aPopulation, 0.004, 0)"
@@ -1510,62 +1253,465 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "162"
+       "222"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(aPopulation.getAllFreq())"
+    "weighted_choices = aPopulation.getAllFreq()\n",
+    "random.choice(list(weighted_choices.elements()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "103"
+       "Counter({0.0: 2489, 1.0: 4979, 5.0: 2532})"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(bPopulation.getAllFreq())"
+    "import collections\n",
+    "c = collections.Counter([1,1,1,1,0,0,5,5])\n",
+    "vsamples = np.zeros(10000)\n",
+    "for i in range(10000):\n",
+    "    vsamples[i] = random.choice(list(c.elements()))\n",
+    "collections.Counter(vsamples)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>27</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>29</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>31</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>39</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>41</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>43</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>46</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>49</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>210</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>211</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>212</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>214</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>215</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>216</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>217</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>219</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>220</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>222</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>223</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>224</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>226</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>227</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>228</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>229</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>230</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>231</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>232</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>235</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>236</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>239</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>240</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>242</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>245</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>246</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>247</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>249</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>250</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>163 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[352, 336, 357, 358, 71, 284, 272, 320, 343, 344, 346, 220, 318, 191]"
+       "     index  0\n",
+       "0        1  2\n",
+       "1        2  3\n",
+       "2        3  1\n",
+       "3        5  1\n",
+       "4       10  2\n",
+       "5       13  1\n",
+       "6       14  1\n",
+       "7       15  1\n",
+       "8       16  2\n",
+       "9       17  1\n",
+       "10      18  1\n",
+       "11      19  3\n",
+       "12      21  2\n",
+       "13      23  1\n",
+       "14      24  1\n",
+       "15      25  1\n",
+       "16      27  1\n",
+       "17      29  3\n",
+       "18      30  1\n",
+       "19      31  2\n",
+       "20      36  1\n",
+       "21      37  1\n",
+       "22      38  1\n",
+       "23      39  3\n",
+       "24      41  2\n",
+       "25      43  2\n",
+       "26      45  1\n",
+       "27      46  1\n",
+       "28      48  1\n",
+       "29      49  1\n",
+       "..     ... ..\n",
+       "133    210  1\n",
+       "134    211  1\n",
+       "135    212  1\n",
+       "136    214  1\n",
+       "137    215  5\n",
+       "138    216  2\n",
+       "139    217  1\n",
+       "140    219  3\n",
+       "141    220  2\n",
+       "142    222  1\n",
+       "143    223  2\n",
+       "144    224  2\n",
+       "145    226  1\n",
+       "146    227  1\n",
+       "147    228  1\n",
+       "148    229  1\n",
+       "149    230  1\n",
+       "150    231  1\n",
+       "151    232  1\n",
+       "152    233  1\n",
+       "153    235  1\n",
+       "154    236  1\n",
+       "155    239  2\n",
+       "156    240  2\n",
+       "157    242  2\n",
+       "158    245  1\n",
+       "159    246  4\n",
+       "160    247  1\n",
+       "161    249  1\n",
+       "162    250  1\n",
+       "\n",
+       "[163 rows x 2 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lkeys"
+    "pandas.DataFrame.from_dict(weighted_choices, orient='index').reset_index()"
    ]
   },
   {
